# pyclima

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: package-build.yml
pyclima/: __main__.py  base.py  cli.py  forecast.py
pyclima/models/: base.py
pyclima/src/: __init__.py  cli.py  forecast.py  main.py
pyclima/src/models/: base.py
tests/: conftest.py  test_main.py
